--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,31 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+.container {
+  max-width: 1440px;
+}
+
+:root {
+  --bg-color: #ffffff;
+}
+
+[data-theme=dark] {
+  --bg-color: #263238;
+}
+
+header nav .navbar-brand {
+  font-family: "Work Sans", sans-serif;
+}
+header nav .navbar-nav {
+  -moz-column-gap: 54px;
+       column-gap: 54px;
+}
+header nav .navbar-nav .nav-item .nav-link {
+  color: #191919;
+  text-align: right;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: capitalize;
+}/*# sourceMappingURL=style.css.map */
