--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,37 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
+body {
+  position: relative;
+}
+
 .container {
   max-width: 1440px;
 }
 
-:root {
-  --bg-color: #ffffff;
+.title h2 {
+  color: #191919;
+  text-align: center;
+  font-family: "Work Sans", sans-serif;
+  font-size: 62px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 74.4px */
+  letter-spacing: 0.3px;
 }
 
-[data-theme=dark] {
-  --bg-color: #263238;
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
-
 header nav .navbar-brand {
   font-family: "Work Sans", sans-serif;
 }
@@ -28,4 +48,136 @@ header nav .navbar-nav .nav-item .nav-link {
   font-weight: 400;
   line-height: normal;
   text-transform: capitalize;
+  transition: 0.4s;
+}
+header nav .navbar-nav .nav-item .nav-link:hover {
+  color: #3C4BA6;
+}
+
+#banner .bnr-box {
+  padding: 200px 0 142px;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto;
+}
+#banner .bnr-box .txt h1 {
+  color: #191919;
+  -webkit-text-stroke-width: 1;
+  -webkit-text-stroke-color: #191919;
+  font-family: "Work Sans", sans-serif;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 86.4px */
+  letter-spacing: 0.3px;
+  max-width: 563px;
+  margin-top: 30px;
+}
+#banner .bnr-box .txt p {
+  max-width: 500px;
+  margin-top: 60px;
+  color: #191919;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 28px */
+}
+#banner .bnr-box .txt form {
+  margin-top: 60px;
+}
+#banner .bnr-box .txt form .box {
+  border: 2px solid #3C4BA6;
+  display: flex;
+  justify-content: space-between;
+  max-width: 443px;
+}
+#banner .bnr-box .txt form .box input {
+  flex-grow: 2;
+  border: none;
+  padding: 20px;
+  color: #191919;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%; /* 16px */
+  letter-spacing: 0.2px;
+}
+#banner .bnr-box .txt form .box input::-moz-placeholder {
+  color: #191919;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%; /* 16px */
+  letter-spacing: 0.2px;
+  text-transform: capitalize;
+}
+#banner .bnr-box .txt form .box input::placeholder {
+  color: #191919;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%; /* 16px */
+  letter-spacing: 0.2px;
+  text-transform: capitalize;
+}
+#banner .bnr-box .txt form .box button {
+  flex-grow: 1;
+  color: #FFFFFF;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 170%; /* 30.6px */
+  letter-spacing: 0.2px;
+  text-transform: capitalize;
+  border: none;
+  background-color: #3C4BA6;
+  padding: 30px 20px;
+}
+#banner .bnr-box .iamge {
+  position: relative;
+  text-align: end;
+}
+#banner .bnr-box .iamge img:nth-child(2) {
+  margin-right: 22px;
+}
+#banner .bnr-box .iamge .bnrvictor1 {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+#banner .bnr-box .iamge .bnrvictor2 {
+  position: absolute;
+  bottom: 3%;
+  left: 28%;
+}
+
+#solution {
+  padding: 140px 0 144px;
+  background: #F6F9FF;
+}
+#solution .solution-box {
+  margin-top: 100px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-row: auto;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+}
+#solution .solution-box .item {
+  position: relative;
+  padding: 50px 30px;
+  background-color: #FFFFFF;
+}
+#solution .solution-box .item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+#solution .solution-box .item h3 {
+  margin-top: 50px;
 }/*# sourceMappingURL=style.css.map */
