--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,16 +1,27 @@
+@import '../variables/variables';
 // fonts start
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+body {
+  position: relative;
+}
 .container {
   max-width: 1440px;
 }
-
-:root {
-  --bg-color: #ffffff;
+.title h2 {
+  color: $black;
+  text-align: center;
+  font-family: $heading;
+  font-size: 62px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 74.4px */
+  letter-spacing: 0.3px;
 }
-
-[data-theme="dark"] {
-  --bg-color: #263238;
-}
-
