--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,5 @@
 @import './base/common';
 @import './variables/variables';
 @import './components/nav';
+@import './components/banner';
+@import './components/solution';
