--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
   position: relative;
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
   max-width: 1440px;
 }
@@ -158,7 +162,7 @@ header nav .navbar-nav .nav-item .nav-link:hover {
 
 #solution {
   padding: 140px 0 144px;
-  background: #F6F9FF;
+  background: #f6f9ff;
 }
 #solution .solution-box {
   margin-top: 100px;
@@ -169,15 +173,37 @@ header nav .navbar-nav .nav-item .nav-link:hover {
        column-gap: 30px;
 }
 #solution .solution-box .item {
-  position: relative;
   padding: 50px 30px;
   background-color: #FFFFFF;
 }
-#solution .solution-box .item img {
-  position: absolute;
-  top: 0;
-  left: 0;
+#solution .solution-box .item .solu-logo {
+  max-width: 100px;
 }
 #solution .solution-box .item h3 {
-  margin-top: 50px;
+  color: #191919;
+  font-family: "Work Sans", sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 130%; /* 39px */
+  text-transform: capitalize;
+}
+#solution .solution-box .item p {
+  color: #191919;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  padding: 31px 0;
+  line-height: 140%; /* 22.4px */
+}
+#solution .solution-box .item a {
+  color: #3C4BA6;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 16px */
+  display: flex;
+  gap: 10px;
 }/*# sourceMappingURL=style.css.map */
