--- a/sass/components/_solution.scss
+++ b/sass/components/_solution.scss
@@ -1,24 +1,46 @@
-#solution{
-    padding: 140px 0 144px;
-    background: #F6F9FF;
-    .solution-box{
-        margin-top: 100px;
-        display: grid;
-        grid-template-columns: auto auto auto;
-        grid-row: auto;
-        column-gap: 30px;
-        .item{
-            position: relative;
-            padding: 50px 30px;
-            background-color: $white;
-            img{
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
-            h3{
-                margin-top: 50px;
-            }
-        }
+#solution {
+  padding: 140px 0 144px;
+  background: #f6f9ff;
+  .solution-box {
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-row: auto;
+    column-gap: 30px;
+    .item {
+      padding: 50px 30px;
+      background-color: $white;
+      .solu-logo {
+        max-width: 100px;
+      }
+      h3 {
+        color: $black;
+        font-family: $heading;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 130%; /* 39px */
+        text-transform: capitalize;
+      }
+      p {
+        color: $black;
+        font-family: $paragraph;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        padding: 31px 0;
+        line-height: 140%; /* 22.4px */
+      }
+      a {
+        color: $brand;
+        font-family: $paragraph;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 100%; /* 16px */
+        display: flex;
+        gap: 10px;
+      }
     }
+  }
 }
