placd&join section added

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,8 @@
 @import './base/common';
 @import './variables/variables';
+@import './mixins/mixins';
 @import './components/nav';
 @import './components/banner';
 @import './components/solution';
+@import './components/place';
+@import './components/join';
