--- a/css/style.css
+++ b/css/style.css
@@ -206,4 +206,82 @@ header nav .navbar-nav .nav-item .nav-link:hover {
   line-height: 100%; /* 16px */
   display: flex;
   gap: 10px;
+}
+
+#place {
+  padding: 140px 0;
+  background-color: #FFFFFF;
+  position: relative;
+}
+#place .placeshap {
+  position: absolute;
+  top: -100px;
+  left: 0;
+}
+#place .placeoverview {
+  display: flex;
+  flex-direction: column;
+  gap: 71px;
+}
+#place .item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#place .item .txt h2 {
+  color: #191919;
+  font-family: "Work Sans", sans-serif;
+  font-size: 62px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 110%; /* 68.2px */
+  max-width: 545px;
+}
+#place .item .txt p {
+  color: #191919;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 28px */
+  padding: 50px 0;
+  max-width: 408px;
+}
+#place .item .txt a {
+  color: #3C4BA6;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 16px */
+  display: flex;
+  gap: 10px;
+}
+#place .item .image img {
+  width: 80%;
+}
+
+#join {
+  padding: 140px 0;
+}
+#join .title h2 {
+  color: #191919;
+  text-align: center;
+  font-family: "Work Sans", sans-serif;
+  font-size: 62px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 110%; /* 68.2px */
+  max-width: 989px;
+  margin: 0 auto;
+}
+#join .title p {
+  color: #191919;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 28px */
+  margin-top: 60px;
 }/*# sourceMappingURL=style.css.map */
