--- a/sass/components/_solution.scss
+++ b/sass/components/_solution.scss
@@ -32,14 +32,7 @@
         line-height: 140%; /* 22.4px */
       }
       a {
-        color: $brand;
-        font-family: $paragraph;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 100%; /* 16px */
-        display: flex;
-        gap: 10px;
+        @include learnmore
       }
     }
   }
